# k-on-quotes

./: README.MD  README.md  quotes.json  quotes.txt
characters/: azusa.json  azusa.txt  general.json  general.txt  jun.json  jun.txt  mio.json  mio.txt  ritsu.json  ritsu.txt  sawako.json  sawako.txt  tsumugi.json  tsumugi.txt  yui.json  yui.txt
package/: README.MD  setup.cfg
package/src/kon_quotes/: __init__.py  kon.py
