[metadata]
name = kon_quotes
version = 1.0.1
author = ZeyaTsu
description = K-ON Quotes API, get quotes from the K-ON Anime
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ZeyaTsu/k-on-quotes
project_urls =
    Bug Tracker = https://github.com/ZeyaTsu/k-on-quotes/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src